snapshots/parsers/syntax/library/functions/conversion/oct/oct_debug_print.snap
---
source: src/syntax/library/functions/conversion/oct.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Dec: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: num
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\" Oct: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Oct
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: num
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
